2020-09-18  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Check availability of libzstd and zstd.

2020-09-08  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Set version to 0.181.
	* NEWS: Add 0.181 section.

2020-08-20  Dmitry V. Levin  <ldv@altlinux.org>

	* configure.ac (--enable-libdebuginfod): AC_DEFINE ENABLE_LIBDEBUGINFOD.

2020-07-17  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Set -DBAD_FTS=1 also for CXXFLAGS.

2020-06-19  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (SUBDIRS): Always add debuginfod.
	* configure.ac (debuginfod): Split off...
	(libdebuginfod): ... this. Also add DUMME_DEBUGINFOD.

2020-06-15  Sergei Trofimovich <slyfox@gentoo.org>

	* configure.ac: Use READELF in build-id check.

2020-06-11  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Set version to 0.180.
	* NEWS: Add 0.180 section.
	* .gitignore: Update with new generated file.

2020-06-10  Mark Wielaard  <mark@klomp.org>

	* configure.ac (MODVERSION): Remove.

2020-03-30  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Set version to 0.179.
	* NEWS: Add 0.179 section.

2020-03-25  Mark Wielaard  <mark@klomp.org>

	* README: Update mailinglist subscription info.
	* CONTRIBUTING: Likewise.

2020-02-03  Frank Ch. Eigler  <fche@redhat.com>

	* configure.ac: Tolerate CXX= for debuginfod configuration.

2019-12-11  Omar Sandoval  <osandov@fb.com>

	* configure.ac: Apply -Werror after user-defined CFLAGS in
	-D_FORTIFY_SOURCE=2 check.

2019-12-06  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Add ac_cv_buildid check.

2019-11-26  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Set version to 0.178.
	NEWS: Add 0.178 section.

2019-11-26  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Add CXXFLAGS for gcov.

2019-10-28  Aaron Merey  <amerey@redhat.com>

	* debuginfod/: New directory for debuginfod code.
	* Makefile.am (SUBDIRS): Recurse there.
	* configure.ac (--enable-debuginfod): New flag & checks.

2019-08-25  Jonathon Anderson <jma14@rice.edu>
