@@ -1,3 +1,11 @@
+2020-10-01  Frank Ch. Eigler  <fche@redhat.com>
+
+	PR25461
+	* profile.sh.in, profile.csh.in: New files for /etc/profiles.d
+	to define $DEBUGINFOD_URLS.
+	* elfutils.spec.in: Configure with --enable-debuginfod-urls.
+	* Makefile.am: Install them.
+
 2020-09-18  Mark Wielaard  <mark@klomp.org>
 
 	* elfutils.spec.in: Add BuildRequires for libzstd-devel and zstd.
